--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "braille": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "file-saver": "^2.0.5",
     "lucide-react": "^0.408.0",
     "next": "14.2.5",
+    "pdfjs-dist": "^4.4.168",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
